--- a/docs/sphinx_docs/source/Biblio.bib
+++ b/docs/sphinx_docs/source/Biblio.bib
@@ -2,39 +2,48 @@
 
 @article{euler1757principes,
   title={Principes g{\'e}n{\'e}raux du mouvement des fluides},
-  author={Euler, Leonhard},
+  author={Euler, L.},
   journal={M{\'e}moires de l'Acad{\'e}mie des Sciences de Berlin},
   pages={274--315},
   year={1757}
 }
 
 @article{pishchalnikov2019lowintensity,
-  title={High-speed video microscopy and numerical modeling of microbubbles driven by low-intensity ultrasound and targeting urinary stones},
-  author={Pishchalnikov, Y. A. and Behnke-Parks, W. and Schmidmayer, K. and Maeda, K. and Colonius, T. and Kenny, T. and Laser, D. J.},
-  journal={Submitted},
+  title={High-speed video microscopy and numerical modeling of bubble dynamics near a surface of urinary stone},
+  author={Pishchalnikov, Y. A. and Behnke-Parks, W. M. and Schmidmayer, K. and Maeda, K. and Colonius, T. and Kenny, T. W. and Laser, D. J.},
+  journal={Journal of the Acoustical Society of America},
+  volume={146},
+  pages={516--531},
   year={2019}
 }
 
 @Article{schmidmayer2019adaptive,
   author    = {Schmidmayer, K. and Petitpas, F. and Daniel, E.},
-  title     = {Adaptive Mesh Refinement algorithm based on dual trees for cells and faces for multiphase compressible flows},
+  title     = {{A}daptive {M}esh {R}efinement algorithm based on dual trees for cells and faces for multiphase compressible flows},
   journal   = {Journal of Computational Physics},
+  volume={388},
+  pages={252--278},
   year      = {2019},
   publisher = {Elsevier},
 }
 
-@article{schmidmayer2019ecogen,
-  title={{ECOGEN}: {A}n open-source tool for multiphase, compressible, multiphysics flows},
+@article{schmidmayer2020ecogen,
+  doi = {10.1016/j.cpc.2019.107093},
+  url = {https://doi.org/10.1016/j.cpc.2019.107093},
+  title={{ECOGEN: A}n open-source tool for multiphase, compressible, multiphysics flows},
   author={Schmidmayer, K. and Petitpas, F. and Le Martelot, S. and Daniel, E.},
-  journal={Submitted},
-  year={2019}
+  journal={Computer Physics Communications},
+  volume={251},
+  year={2020}
 }
 
 @article{schmidmayer2019comparativeStudy,
-  title={Interface-capturing models and schemes to solve bubble dynamics and cavitation: {A} comparative study},
-  author={Schmidmayer, K. and Colonius, T.},
-  journal={In preparation},
-  year={2019}
+  title={An assessment of multicomponent flow models and interface capturing schemes for spherical bubble dynamics},
+  author={Schmidmayer, K. and Bryngelson, S. H. and Colonius, T.},
+  journal={J. Comp. Phys.},
+  volume={402},
+  pages={109080},
+  year={2020}
 }
 
 @article{schmidmayer2019heat,
@@ -1000,16 +1009,6 @@
   number={7},
   pages={583--605},
   year={2017}
-}
-
-@article{gmsh,
-  title={Gmsh: a three-dimensional finite element mesh generator with built-in pre- and post-processing facilities},
-  author={Geuzaine, C. and Remacle, J.-F.},
-  journal={International Journal for Numerical Methods in Engineering},
-  volume={79},
-  number={11},
-  pages={1309--1331},
-  year={2009}
 }
 
 @article{igra2003experimental,
@@ -2586,7 +2585,7 @@
 
 @Article{kapila97,
   author =   {A. Kapila and S. Son and J. Bdzil and R. Menikoff and D. Stewart},
-  title =    {Two-phase modeling of \textsc{DDT}: \textsc{S}tructure of the velocity-relaxation zone},
+  title =    {Two-phase modeling of {DDT}: {S}tructure of the velocity-relaxation zone},
   journal =    {Physics of Fluids},
   year =   1997,
   volume =   9,
@@ -2596,7 +2595,7 @@
 
 @Article{kapila2001,
   author =   {A. Kapila and R. Menikoff and J. Bdzil and S. Son and D. Stewart},
-  title =    {Two-phase modeling of \textsc{DDT} in granular materials: \textsc{R}educed equations},
+  title =    {Two-phase modeling of {DDT} in granular materials: {R}educed equations},
   journal =    {Physics of Fluids},
   year =   2001,
   volume =   13,
@@ -2723,7 +2722,7 @@
 
 @book{toro2013riemann,
   title={Riemann solvers and numerical methods for fluid dynamics: a practical introduction},
-  author={Toro, Eleuterio F},
+  author={Toro, E.F.},
   year={2013},
   publisher={Springer Science \& Business Media}
 }
@@ -3173,14 +3172,25 @@
   pages =  {897--926}
 }
 @Article{van1977towards,
-  author    = {Van Leer, Bram},
-  title     = {Towards the ultimate conservative difference scheme. IV. A new approach to numerical convection},
+  author    = {Van Leer, B.},
+  title     = {Towards the ultimate conservative difference scheme. {IV. A} new approach to numerical convection},
   journal   = {Journal of computational physics},
   year      = {1977},
   volume    = {23},
   number    = {3},
   pages     = {276--299},
   publisher = {Elsevier},
+}
+
+@article{le2016noble,
+  title={The {Noble-Abel Stiffened-Gas} equation of state},
+  author={Le M{\'e}tayer, O. and Saurel, R.},
+  journal={Physics of Fluids},
+  volume={28},
+  number={4},
+  pages={046102},
+  year={2016},
+  publisher={AIP Publishing}
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
